[workspace]
resolver = "2"
members = ["grokking", "learning-rust/http-server", "learning-rust/minigrep", "learning-rust/rustlings"]

[profile.release]
panic = "abort"
opt-level = 3 # The default for release

[profile.dev]
panic = "abort"
#opt-level = 0 # The default for dev
opt-level = 3 # The default for dev
