[package]
name = "dice_server"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
rand = "0.9.0"

rayon = "1.10.0"



opentelemetry = "0.30.0"
opentelemetry_sdk = "0.30.0"
opentelemetry-stdout = { version = "0.30.0", features = ["trace"] }
opentelemetry-appender-tracing = { version = "0.30.1" }
opentelemetry-datadog = { version = "0.18.0", default-features = false, features = ["intern-ahash"] }
opentelemetry-http = { version = "0.30.0", default-features = false, features = ["reqwest"] }
opentelemetry-semantic-conventions = { version = "0.30.0", default-features = false }
tracing = { version = "0.1"}
tracing-opentelemetry = { version = "0.31.0", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "std", "fmt", "time", "json"] }