[package]
name = "grokking"
version = "0.1.0"
edition = "2024"

[dependencies]
priority-queue = "2.3.1"
rand = "0.8.5"

[dev-dependencies]
bacon = "3.12.0"
criterion = "0.5.1"
tailcall = "1.0.1"

#[[bench]]
#name = "chapter_3_tail_factorial"
#harness = false

[[bench]]
name = "chapter_4_maximum_common_divisor"
harness = false