[package]
name = "minigrep_santunioni"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A lightweight version of grep"
authors = ["Vinícius Vargas <santunionivinicius@gmail.com>"]


[[bench]]
name = "benchmark"
harness = false


[dev-dependencies]
criterion = "0.5.1"

[profile.dev]
opt-level = 0 # The default for dev

[profile.release]
opt-level = 3 # The default for release